# kekmonitors-cpp

./: .gitignore  CMakeLists.txt  install_mongo.sh
include/kekmonitors/: config.hpp  connection.hpp  core.hpp  kekmonitors.hpp  moman.hpp  monitormanager.hpp  msg.hpp  process.hpp  server.hpp  typedefs.hpp  utils.hpp
include/kekmonitors/comms/: msg.hpp  server.hpp
src/: CMakeLists.txt  config.cpp  main.cpp  moman.cpp  moman_cli.cpp  monitormanager.cpp  stopmm.cpp  utils.cpp
src/comms/: msg.cpp  server.cpp
src/lib/: config.cpp  connection.cpp  core.cpp  inotify-cxx.cpp  monitormanager.cpp  msg.cpp  server.cpp  utils.cpp
